<resources>
    <string name="app_name">TandurApps</string>
    <string name="akun_baru">Masuk dengan Akun Google</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Buat Akun Baru</string>
    <string name="register">Daftar</string>
    <string name="akun_baruu">Daftar dengan Akun Google</string>
    <string name="username">Username</string>
    <string name="pass_confirm">Konfirmasi Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>